# beerponggame

./: .gitignore  .gitmodules  CMakeLists.txt  Cup.cpp  Cup.h  Player.cpp  Player.h  README.md  Sample.h  Sample.inl  Vec3.h  emptyScene.cpp  emptyScene.cpp.old  emptyScene.h  main.cpp  main.cpp.old  main.h  mainNajwa.cpp  mainNajwa.h  simpleScene.cpp  simpleScene.cpp.old  simpleScene.h  standaloneScene.cpp  standaloneScene.h
CMake/Modules/: CheckCompilerToolchain.cmake  FindUrho3D.cmake
src/: Ball.cpp  Ball.h  BoardGame.cpp  BoardGame.h  CMakeLists.txt  Cup.cpp  Cup.h  Player.cpp  Player.h  Table.cpp  Table.h  Vec2.h  mainArchitecture.cpp  mainLucas.cpp
src/html/: Ball_8h_source.html  Cup_8h_source.html  Player_8h_source.html  Table_8h_source.html  Vec2_8h_source.html  Vec3_8h_source.html  annotated.html  classBall-members.html  classBall.html  classCup-members.html  classCup.html  classPlayer-members.html  classPlayer.html  classTable-members.html  classTable.html  classVec2-members.html  classVec2.html  classVec3-members.html  classVec3.html  classes.html  files.html  functions.html  functions_func.html
src/html/search/: all_2.js  all_3.js  all_6.js  all_7.js  classes_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/latex/: annotated.tex  classBall.tex  classCup.tex  classPlayer.tex  classTable.tex  classVec2.tex  classVec3.tex  refman.tex
src_3d/: Cup3d.cpp  Player.cpp  Player.h  Player3d.cpp  Player3d.h
